--- a/src/component/FollowProfile/styles.module.scss
+++ b/src/component/FollowProfile/styles.module.scss
@@ -53,3 +53,16 @@
     }
   }
 }
+
+.connectionsrid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px; // Spacing between cards
+  justify-content: space-between;
+
+  .connectioncolumn {
+    flex: 1 1 calc(50% - 16px); // Ensure two columns
+    max-width: calc(50% - 16px); // Maintain two cards per row
+    box-sizing: border-box;
+  }
+}
