--- a/src/component/FollowProfile/styles.module.scss
+++ b/src/component/FollowProfile/styles.module.scss
@@ -11,7 +11,7 @@
   width: 1000px;
   margin-left: auto;
   margin-right: auto;
-  height: 888px;
+  // height: 888px;
   .Profilefollow {
     @include space-between();
     h5 {
