--- a/src/component/FollowProfile/styles.module.scss
+++ b/src/component/FollowProfile/styles.module.scss
@@ -66,7 +66,7 @@
   flex-wrap: wrap;
   gap: 16px; // Spacing between cards
   justify-content: space-between;
-
+  margin-top: 16px;
   .connectioncolumn {
     flex: 1 1 calc(50% - 16px); // Ensure two columns
     max-width: calc(50% - 16px); // Maintain two cards per row
