--- a/src/component/shared/dropdown/styles.module.scss
+++ b/src/component/shared/dropdown/styles.module.scss
@@ -41,10 +41,14 @@
         font-weight: 600;
         color: $gray-25;
       }
-
+      .Enter {
+        visibility: hidden;
+      }
       &:hover {
         background: $gray-700;
-        // width: 280px;
+        .Enter {
+          visibility: visible;
+        }
       }
     }
   }
