--- a/src/component/Pagination/styles.module.scss
+++ b/src/component/Pagination/styles.module.scss
@@ -8,16 +8,18 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+  border-radius: 4px;
   color: $gray-25;
+  @include fontAlpha();
 }
-
-// .Rangedisplay {
-//   font-size: 1rem;
-// }
 
 .paginationControls {
   @include center-flex();
-  border-radius: 8px;
+  background: $gray-800;
+  height: 36px;
+  border: 1px $gray-700;
+  border-radius: 4px;
+  @include fontAlpha();
 }
 
 .Paginationbutton {
@@ -27,8 +29,9 @@
   font-size: 16px;
   font-weight: 400;
   padding: 6px 12px;
+  border-radius: 4px;
   cursor: pointer;
-  transition: color 0.3s;
+  @include fontAlpha();
 
   &:hover:not(:disabled) {
   }
@@ -39,25 +42,34 @@
 }
 
 .pageNumberButton {
+  @include fontAlpha();
   background: none;
   border: none;
   color: #ffffff;
-  font-size: 1rem;
-  margin: 0 0.5rem;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  transition:
-    background 0.3s,
-    color 0.3s;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 6px 12px;
+  line-height: 24px;
   border-radius: 4px;
+  border-left: 1px solid $gray-700;
+  border-right: 1px solid $gray-700;
+  cursor: pointer;
 
-  &:hover {
-    background: #6f42c1;
-    color: #ffffff;
-  }
+  // &:hover {
+  //   @include fontAlpha();
+  //   background: $gray-500;
+  //   color: #ffffff;
+  // }
 
   &.activePage {
-    background: #6f42c1;
-    color: #ffffff;
+    @include fontAlpha();
+    border: 1px $gray-700;
+    background: $gray-500;
+    color: white;
   }
+}
+
+.ellipsis {
+  color: #a0a0a0;
+  padding: 5px;
 }
