--- a/src/component/FollowProfile/SuugestButton/styles.module.scss
+++ b/src/component/FollowProfile/SuugestButton/styles.module.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/fonts';
 @import '../../../styles/mixin';
 
-.Followbutton {
+.followButton {
   background-color: $gray-800;
   color: $gray-300;
   width: 240px;
