--- a/src/component/Modal/SuggesModalCard/styles.module.scss
+++ b/src/component/Modal/SuggesModalCard/styles.module.scss
@@ -2,28 +2,27 @@
 @import '../../../styles/fonts';
 @import '../../../styles/mixin';
 
-.Cardcontainer {
+.cardContainer {
   width: 657px;
   height: 227px;
   padding: 20px 16px;
   border: 1px solid $gray-700;
   border-radius: 8px;
   gap: 24px;
-  // margin-top: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   background-color: $Gradient-Grey-Black;
-  .Userprofile {
+  .userProfile {
     display: flex;
     justify-content: space-between;
-    .Usercard {
+    .userCard {
       display: flex;
       width: 508px;
       height: 81px;
-      .Profileimg {
+      .profileImg {
         border-radius: 100px;
       }
-      .Profile {
+      .profile {
         margin-left: 12px;
         h5 {
           @include fontAlpha();
@@ -34,26 +33,20 @@
           margin-right: 77px;
         }
         p {
-          @include fontAlpha();
+          @include font-sm();
           margin-top: 6px;
-          font-size: 14px;
-          line-height: 21px;
-          font-weight: 400;
           margin-right: 15px;
           color: $gray-25;
         }
-        .Locationchange {
-          @include fontAlpha();
-          font-size: 14px;
-          line-height: 21px;
-          font-weight: 400;
+        .locationChange {
+          @include font-sm();
           color: $gray-100;
           position: relative;
           bottom: 15px;
           margin-left: 8px;
           margin-top: 20px;
 
-          .Location {
+          .location {
             position: relative;
             top: 3px;
             right: 5px;
@@ -61,7 +54,7 @@
         }
       }
     }
-    .Followaccount {
+    .followAccount {
       margin-right: 40px;
     }
   }
@@ -74,48 +67,5 @@
 
   .Bussinessimpact {
     margin-top: 16px;
-    .Impacttitle {
-      @include space-between();
-      .Bussinessalert {
-        display: flex;
-        justify-content: space-between;
-        width: 205px;
-        h5 {
-          @include fontAlpha();
-          font-size: 14px;
-          color: $gray-100;
-          line-height: 21px;
-          font-weight: 400;
-        }
-      }
-      p {
-        @include fontAlpha();
-        background-color: $gray-700;
-        color: $blue-400;
-        font-size: 12px;
-        line-height: 18px;
-        font-weight: 400;
-        padding: 2px 10px;
-        border-radius: 80px;
-      }
-    }
-  }
-  .Scores {
-    @include justify-space-between();
-    // margin-top: 16px;
-
-    .Score {
-      margin-top: 16px;
-      span {
-        @include fontAlpha();
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 21px;
-        margin-right: 135px;
-        position: relative;
-        top: 8px;
-        color: $gray-100;
-      }
-    }
   }
 }
