--- a/src/component/Modal/styles.module.scss
+++ b/src/component/Modal/styles.module.scss
@@ -2,53 +2,45 @@
 @import '../../styles/fonts';
 @import '../../styles/mixin';
 
-.Modal {
+.modal {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
   background: $Dropdown-Gradient;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include center-flex();
   z-index: 2000;
-}
-
-.ModalContent {
-  // background: $Gradient-Grey-Black;
-  background-color: rgba(23, 21, 34, 1);
-  padding: 24px;
-  width: 705px;
-  height: 970px;
-  text-align: center;
-  position: absolute;
-  right: 0;
-  top: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-
-  h2 {
-    margin-bottom: 10px;
-  }
-
-  p {
-    // margin-bottom: 20px;
-  }
-
-  .Closeicon {
+  .modalContent {
+    background-color: rgba(23, 21, 34, 1);
+    padding: 24px;
+    width: 705px;
+    height: 970px;
+    text-align: center;
     position: absolute;
-    top: 44px;
-    right: 25px;
-    cursor: pointer;
-    transition: color 0.2s ease;
-    background: $gray-800;
-    border-radius: 4px;
-    width: 35px;
-    height: 35px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    border-radius: 8px;
+    right: 0;
+    top: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    h2 {
+      margin-bottom: 10px;
+    }
+    .closeIcon {
+      position: absolute;
+      top: 44px;
+      right: 25px;
+      cursor: pointer;
+      transition: color 0.2s ease;
+      background: $gray-800;
+      border-radius: 4px;
+      width: 35px;
+      height: 35px;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      border-radius: 8px;
+      border: none;
+    }
   }
 }
