--- a/src/component/SearchProfile/SearchBar/styles.module.scss
+++ b/src/component/SearchProfile/SearchBar/styles.module.scss
@@ -2,20 +2,18 @@
 @import '../../../styles/fonts';
 @import '../../../styles/mixin';
 
-.Searchbar {
+.searchBar {
   display: flex;
   align-items: center;
-  width: 283px;
+  width: 331px;
   height: 40px;
   padding: 10px 16px;
   border: 1px solid $gray-600;
   border-radius: 8px;
   background-color: $gray-800;
-  .Searchinput {
+  .searchInput {
     margin-left: 10px;
-    font-size: 14px;
-    line-height: 21px;
-    font-weight: 400;
+    @include font-sm();
     color: $gray-100;
     background: none;
     border: none;
@@ -24,7 +22,7 @@
   }
 }
 
-.Clearbutton {
+.clearButton {
   position: absolute;
   right: 10px;
   background: none;
